--- a/SensorTest/Info.plist
+++ b/SensorTest/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMotionUsageDescription</key>
+	<string>Give me access now!</string>
 </dict>
 </plist>
